--- a/1 HTML基础/1.2 HTML基本结构.md
+++ b/1 HTML基础/1.2 HTML基本结构.md
@@ -1,2 +1,16 @@
-# 我是用来占坑的<br />
 
+## HTML基本结构
+一个HTML文档由4个基本部分组成：
+* 1 一个文档声明：<!DOCTYPE HTML>
+* 2 <html> 与 </html> 之间的文本描述网页
+* 3 <head>与</head>头部元素的容器
+* 4 <body> 与 </body> 之间的文本是可见的页面内容
+
+### 1.文档说明
+ * <!DOCTYPE> 声明必须是 HTML 文档的第一行，位于 <html> 标签之前。告知浏览器的解析器用什么文档标准解析这个文档。DOCTYPE不存在或格式不正确会导致文档以兼容模式呈现。
+
+* 标准模式的排版 和JS运作模式都是以该浏览器支持的最高标准运行。在兼容模式中，页面以宽松的向后兼容的方式显示,模拟老式浏览器的行为以防止站点无法工作。
+### 2.HTML标签
+<html>标签的作用相当于设计者在告诉浏览器，整个网页是从<html>这里开始的，然后到</html>结束。
+### 3.head标签
+### 4.body标签
